# jangri

./: .gitignore  Cargo.toml  Makefile  README.md  dis.txt  ramfs.img
allocator/: Cargo.toml
allocator/src/: bitmap.rs  lib.rs  linked_list.rs  page_allocator.rs  tests.rs
arch/riscv/: Cargo.toml
arch/riscv/src/: lib.rs  plic.rs  trampoline.S  traps.rs  uart.rs  vm.rs
arch/riscv/src/vm/: pte.rs
hal/: Cargo.toml
hal/src/: constants.rs  cpu.rs  error.rs  interrupts.rs  lib.rs  vm.rs
janglib/: Cargo.toml
janglib/src/: io.rs  lib.rs  memory.rs  ramfs.rs
kernel/: .gitignore  Cargo.toml  build.py  build.rs  main.ld
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  constants.rs  drivers.rs  entry.s  error.rs  file.rs  fs.rs  global_state.rs  init.S  main.rs  panic.rs  pipe.rs  plic.rs  process.rs  scheduler.rs  syscall.rs  trampoline.S  traps.rs  vm.rs
kernel/src/drivers/: ram_disk.rs  uart.rs  virtio_disk.rs
kernel/src/fs/: caching.rs  sfs.rs
kernel/src/syscall/: fs.rs  io.rs  process.rs
sync/: Cargo.toml
sync/src/: lib.rs  mutex.rs  rwlock.rs  spinlock.rs
userspace/: .clang-format  .clangd  Cargo.toml  about.c  build.rs  cat.c  crt0.S  init.c  process1.c  process1.elf  process2.c  process2.elf  sh.c  syscalls.c  syscalls.h  userspace.ld
userspace/src/greet/: main.rs
userspace/src/maths/: main.rs
userspace/src/sh/: main.rs
