[workspace]
members = ["allocator", "arch/riscv", "hal", "kernel", "sync"]
resolver = "3"

[workspace.dependencies]
anyhow = {version = "1.0.100", default-features = false}
allocator = {path = "./allocator"}
spin = {version = "0.10.0"}
dlmalloc = "0.2.12"
thiserror = {version = "2.0.17", default-features = false}
riscv = "0.15.0"
lock_api = "0.4.14"
sync = {path = "./sync"}
hal = {path = "./hal"}
riscv_arch = {path = "./arch/riscv"}
wit-bindgen = {version = "0.51.0"}
