[workspace]
members = ["allocator", "arch/riscv", "hal", "janglib", "kernel", "sync", "userspace"]
resolver = "3"

[workspace.dependencies]
allocator = {path = "./allocator"}
spin = {version = "0.10.0"}
riscv = "0.15.0"
lock_api = "0.4.14"
sync = {path = "./sync"}
hal = {path = "./hal"}
riscv_arch = {path = "./arch/riscv"}
wit-bindgen = {version = "0.51.0"}
janglib = {path = "./janglib"}
