[package]
name = "janglib"
version = "0.1.1"
edition = "2024"

[dependencies]
hal = {workspace = true, optional = true}
talc = {version = "5.0.3", optional = true}
spin = {workspace = true, optional = true}
allocator.workspace = true

[features]
default = ["hal"]
user = ["default", "spin", "talc"]
host_machine = []
