[package]
name = "jangri"
version = "0.0.1"
edition = "2024"

[dependencies]
ringbuffer = "0.16.0"
allocator.workspace = true
anyhow.workspace = true
talc = "4.4.3"
thiserror.workspace = true
sync.workspace = true
riscv_arch.workspace = true
hal.workspace = true
lock_api.workspace = true
spin.workspace = true


[dependencies.elf]
version = "0.8.0"
default-features = false

[build-dependencies]
cc = "1.2.48"

[profile.dev]
panic = "abort"
